--- a/css/style.css
+++ b/css/style.css
@@ -1182,6 +1182,9 @@ footer .footer-copyright-area p {
     font-size: 20px;
     line-height: 36px;
   }
+  #ctaArea .content-circle {
+    margin-bottom: 25px;
+  }
 }
 @media screen and (min-width: 576px) and (max-width: 767px) {
   #ctaArea .section-subheading {
@@ -1191,8 +1194,14 @@ footer .footer-copyright-area p {
     font-size: 20px;
     line-height: 36px;
   }
+  #ctaArea .content-circle {
+    margin-bottom: 25px;
+  }
 }
 @media screen and (max-width: 575px) {
+  #ctaArea .content-circle {
+    margin-bottom: 25px;
+  }
   #ctaArea .section-subheading {
     padding: 0px 0px;
   }
